# meet-my-agent

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0b2f41134e30_create_missing_info_reports_table.py
backend/app/: main.py
backend/app/api/v1/: agents.py  auth.py  chats.py  files.py  router.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: agent.py  base.py  chat.py  file.py  message.py  missing_info.py  user.py
backend/app/schemas/: agent.py  auth.py  chat.py  file.py
backend/app/services/: agent_service.py  auth_service.py  file_service.py  rag_service.py
backend/app/storage/: base.py  local.py
backend/scripts/: debug_rag.py  test_missing_info.py  test_suggested_questions.py
backend/tests/: conftest.py
backend/worker/: main.py
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
frontend/components/: AuthPage.jsx  ChatModal.js  ChatScreen.jsx  CrepeEditor.jsx  DropOverlay.jsx  LoginModal.js  Sidebar.jsx  TopNavbar.jsx  UploadMenu.jsx  Workspace.jsx
frontend/context/: AuthContext.jsx
frontend/lib/: api.js  auth.js  fileUtils.js  uuid.js
frontend/pages/: _app.js  index.js
frontend/pages/auth/: callback.js
frontend/pages/profile/: [agent_id].js
frontend/pages/profile/[agent_id]/chat/: index.js  (+1 more)
frontend/pages/provider/: index.jsx  knowledge.js
frontend/styles/: globals.css
