[project]
name = "meet-my-agent"
version = "0.1.0"
description = "Common Auth, File Management, and Agent Chat Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.5.0",
    "pydantic>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "rq>=1.16.0",
    "redis>=5.1.0",
    "openai>=1.50.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.12",
    "numpy>=2.0.0",
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
